--- a/PL/Views/Evento/GetAllEvento.cshtml
+++ b/PL/Views/Evento/GetAllEvento.cshtml
@@ -5,3 +5,50 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GetAll</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+</head>
+<body style="background-color: #e7fddd;">
+    <div class="container" style="margin-top: 30px;">
+        <div class="row">
+            <div class="col-6" style="padding: 0px;">
+                <h2 style="font-weight: bold;">Eventos</h2>
+            </div>
+            <div class="col-6" style="text-align: end; padding: 0px;">
+                <a class="btn btn-primary" href="#"><i class="bi bi-plus-circle"></i> Agregar</a>
+            </div>
+        </div>
+        <div class="row">
+            <table class="table" id="tblEventos">
+                <thead style="text-align: center;">
+                    <tr>
+                        <th style="background-color: #214a16; color: white;">Nombre</th>
+                        <th style="background-color: #214a16; color: white;">Ubicación</th>
+                        <th style="background-color: #214a16; color: white;">Fecha</th>
+                        <th style="background-color: #214a16; color: white;">Costo</th>
+                        <th style="background-color: #214a16; color: white;">Editar</th>
+                        <th style="background-color: #214a16; color: white;">Eliminar</th>
+                    </tr>
+                </thead>
+                <tbody style="text-align: center;">
+                    <tr>
+                        <td style="background-color: #cefbbb;"></td>
+                        <td style="background-color: #cefbbb;"></td>
+                        <td style="background-color: #cefbbb;"></td>
+                        <td style="background-color: #cefbbb;"></td>
+                        <td style="background-color: #cefbbb;"><a href="#" class="btn btn-warning" style="color: white;"><i class="bi bi-pencil"></i> </a></td>
+                        <td style="background-color: #cefbbb;"><a href="#" class="btn btn-danger"><i class="bi bi-trash"></i></a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</body>
+</html>
