Se agrego la vista de GetAll

--- a/PL/Views/Evento/GetAllEvento.cshtml
+++ b/PL/Views/Evento/GetAllEvento.cshtml
@@ -22,7 +22,7 @@
                 <h2 style="font-weight: bold;">Eventos</h2>
             </div>
             <div class="col-6" style="text-align: end; padding: 0px;">
-                <a class="btn btn-primary" href="#"><i class="bi bi-plus-circle"></i> Agregar</a>
+                <a href="@Url.Action("FormsEvento", "Evento")" class="btn btn-success">Agregar Libro <i class="bi bi-plus-circle"></i></a>
             </div>
         </div>
         <div class="row">
@@ -38,14 +38,18 @@
                     </tr>
                 </thead>
                 <tbody style="text-align: center;">
-                    <tr>
-                        <td style="background-color: #cefbbb;"></td>
-                        <td style="background-color: #cefbbb;"></td>
-                        <td style="background-color: #cefbbb;"></td>
-                        <td style="background-color: #cefbbb;"></td>
-                        <td style="background-color: #cefbbb;"><a href="#" class="btn btn-warning" style="color: white;"><i class="bi bi-pencil"></i> </a></td>
-                        <td style="background-color: #cefbbb;"><a href="#" class="btn btn-danger"><i class="bi bi-trash"></i></a></td>
-                    </tr>
+                    @foreach (ML.Evento eventoItem in Model.Eventos)
+                    {
+                        <tr>
+                            <td style="background-color: #cefbbb;">@eventoItem.Nombre</td>
+                            <td style="background-color: #cefbbb;">@eventoItem.Ubicacion</td>
+                            <td style="background-color: #cefbbb;">@eventoItem.Fecha.ToString("dd/MM/yyyy")</td>
+                            <td style="background-color: #cefbbb;">@eventoItem.Costo</td>
+                            <td style="background-color: #cefbbb;"><a href="@Url.Action("FormsEvento", "Evento", new {IdEvento = eventoItem.IdEvento})" class="btn btn-warning" style="color: white;"><i class="bi bi-pencil"></i> </a></td>
+                            <td style="background-color: #cefbbb;"><a href="@Url.Action("DeleteEvento", "Evento", new {IdEvento = eventoItem.IdEvento})" class="btn btn-danger"><i class="bi bi-trash"></i></a></td>
+                        </tr>
+
+                    }
                 </tbody>
             </table>
         </div>
