--- a/PL/Views/Evento/FormsEvento.cshtml
+++ b/PL/Views/Evento/FormsEvento.cshtml
@@ -1,6 +1,7 @@
-﻿@*@model ML.Evento*@ @*El modelo puedes llamarlo con blazor asp-for="Nombre"**@
+﻿@model ML.Evento
+
 @{
-    ViewBag.Title = "FormEvento";
+    ViewBag.Title = "FormsEvento";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -57,7 +58,7 @@
                             </div>
 
                             <div class="d-flex justify-content-center">
-                                <button type="button" data-mdb-button-init
+                                <button type="submit" data-mdb-button-init
                                         data-mdb-ripple-init class="btn btn-success btn-block btn-lg text-body">
                                     Registrar
                                 </button>
