--- a/PL/Views/Evento/FormsEvento.cshtml
+++ b/PL/Views/Evento/FormsEvento.cshtml
@@ -31,41 +31,44 @@
                     <div class="card-body p-5">
                         <h2 class="text-uppercase text-center mb-5">Registrar Evento</h2>
 
-                        <form method="post">
-
+                        @using (Html.BeginForm())
+                        {
                             <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="text" id="form3Example1cg" class="form-control form-control-lg" @*asp-for="Nombre"*@ />
-                                <label class="form-label" for="form3Example1cg">Nombre</label>
+                                @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control form-control-lg", id = "form3Example1cg" })
+                                @Html.LabelFor(model => model.Nombre, "Nombre", new { @class = "form-label" })
+                                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                             </div>
 
                             <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="text" id="form3Example3cg" class="form-control form-control-lg" />
-                                <label class="form-label" for="form3Example3cg">Ubicacion</label>
+                                @Html.TextBoxFor(model => model.Ubicacion, new { @class = "form-control form-control-lg", id = "form3Example3cg" })
+                                @Html.LabelFor(model => model.Ubicacion, "Ubicacion", new { @class = "form-label" })
+                                @Html.ValidationMessageFor(model => model.Ubicacion, "", new { @class = "text-danger" })
                             </div>
 
                             <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="date" id="form3Example4cg" class="form-control form-control-lg" />
-                                <label class="form-label" for="form3Example4cg">Fecha</label>
+                                @Html.TextBoxFor(model => model.Fecha, new { @type = "date", @class = "form-control form-control-lg", id = "form3Example4cg" })
+                                @Html.LabelFor(model => model.Fecha, "Fecha", new { @class = "form-label" })
+                                @Html.ValidationMessageFor(model => model.Fecha, "", new { @class = "text-danger" })
                             </div>
 
                             <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="text" id="form3Example4cdg" class="form-control form-control-lg" />
-                                <label class="form-label" for="form3Example4cdg">Costo</label>
+                                @Html.TextBoxFor(model => model.Costo, new { @class = "form-control form-control-lg", id = "form3Example4cdg" })
+                                @Html.LabelFor(model => model.Costo, "Costo", new { @class = "form-label" })
+                                @Html.ValidationMessageFor(model => model.Costo, "", new { @class = "text-danger" })
                             </div>
-                            <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="text" id="form3Example4cdg" class="form-control form-control-lg" />
-                                <label class="form-label" for="form3Example4cdg">Tipo Catalogo</label>
-                            </div>
+
+                            @*<div data-mdb-input-init class="form-outline mb-4">
+                                @Html.TextBoxFor(model => model.TipoCatalogo, new { @class = "form-control form-control-lg", id = "form3Example4cdg" })
+                                @Html.LabelFor(model => model.TipoCatalogo, "Tipo Catalogo", new { @class = "form-label" })
+                                @Html.ValidationMessageFor(model => model.TipoCatalogo, "", new { @class = "text-danger" })
+                            </div>*@
 
                             <div class="d-flex justify-content-center">
-                                <button type="submit" data-mdb-button-init
-                                        data-mdb-ripple-init class="btn btn-success btn-block btn-lg text-body">
+                                <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-success btn-block btn-lg text-body">
                                     Registrar
                                 </button>
                             </div>
-
-                        </form>
-
+                        }
                     </div>
                 </div>
             </div>
@@ -74,3 +77,4 @@
 </main>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.js"></script>
+
