--- a/PL/Views/Evento/FormsEvento.cshtml
+++ b/PL/Views/Evento/FormsEvento.cshtml
@@ -43,6 +43,11 @@
                                 @Html.TextBoxFor(model => model.Ubicacion, new { @class = "form-control" })
                             </div>
 
+                            @*<div data-mdb-input-init class="form-label mb-4">
+                                @Html.LabelFor(model => model.Fecha, new { @class = "" })
+                                @Html.TextBoxFor(model => model.Fecha, new { @class = "form-control", @type = "date" })
+                            </div>*@
+
                             <div data-mdb-input-init class="form-label mb-4">
                                 @Html.LabelFor(model => model.Fecha, new { @class = "" })
                                 @Html.EditorFor(model => model.Fecha, new { @htmlAttributes = new { @class = "form-control", @type = "date" } })
@@ -58,18 +63,12 @@
                                 @Html.DropDownListFor(model => model.TipoEvento.IdTipoEvento, new SelectList(Model.TipoEvento.TiposEventos, "IdTipoEvento", "Nombre"), "Selecciona una opcion", new { @class = "form-control", @required = "" })
                             </div>
 
-                            @*<div data-mdb-input-init class="form-outline mb-4">
-                                @Html.TextBoxFor(model => model.TipoCatalogo, new { @class = "form-control form-control-lg", id = "form3Example4cdg" })
-                                @Html.LabelFor(model => model.TipoCatalogo, "Tipo Catalogo", new { @class = "form-label" })
-                                @Html.ValidationMessageFor(model => model.TipoCatalogo, "", new { @class = "text-danger" })
-                            </div>*@
-
                             <div class="d-flex justify-content-center">
                                 <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-success btn-block btn-lg text-body">
                                     Registrar
                                 </button>
                             </div>
-                        }
+                        </form>
                     </div>
                 </div>
             </div>
@@ -78,4 +77,3 @@
 </main>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.js"></script>
-
