--- a/PL/Views/Evento/FormsEvento.cshtml
+++ b/PL/Views/Evento/FormsEvento.cshtml
@@ -29,7 +29,18 @@
             <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                 <div class="card highlighted-border">
                     <div class="card-body p-5">
-                        <h2 class="text-uppercase text-center mb-5">Registrar Evento</h2>
+
+                        @Html.HiddenFor(model => model.IdEvento)
+
+                        @if (Model.IdEvento != 0)
+                        {
+                            <h2 class="text-uppercase text-center mb-5">Actualizar Evento</h2>
+
+                        }
+                        else
+                        {
+                            <h2 class="text-uppercase text-center mb-5">Registrar Evento</h2>
+                        }
 
                         <form method="post">
 
@@ -42,11 +53,6 @@
                                 @Html.LabelFor(model => model.Ubicacion, new { @class = "" })
                                 @Html.TextBoxFor(model => model.Ubicacion, new { @class = "form-control" })
                             </div>
-
-                            @*<div data-mdb-input-init class="form-label mb-4">
-                                @Html.LabelFor(model => model.Fecha, new { @class = "" })
-                                @Html.TextBoxFor(model => model.Fecha, new { @class = "form-control", @type = "date" })
-                            </div>*@
 
                             <div data-mdb-input-init class="form-label mb-4">
                                 @Html.LabelFor(model => model.Fecha, new { @class = "" })
@@ -63,11 +69,31 @@
                                 @Html.DropDownListFor(model => model.TipoEvento.IdTipoEvento, new SelectList(Model.TipoEvento.TiposEventos, "IdTipoEvento", "Nombre"), "Selecciona una opcion", new { @class = "form-control", @required = "" })
                             </div>
 
-                            <div class="d-flex justify-content-center">
-                                <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-success btn-block btn-lg text-body">
-                                    Registrar
-                                </button>
-                            </div>
+                            @if (Model.IdEvento != 0)
+                            {
+                                <div class="row justify-content-center">
+                                    <div class="col-md-5">
+                                        <hr width="100%" style="margin:10px 0; " />
+                                        <div class="d-flex justify-content-center">
+                                            <button type="submit" class="btn btn-success">Actualizar <i class="bi bi-pencil-square"></i></button>
+                                            <a style="margin-left: 6px;" href="@Url.Action("GetAllEvento", "Evento")" class="btn btn-warning">Regresar <i class="bi bi-arrow-return-left"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="row justify-content-center">
+                                    <div class="col-md-5">
+                                        <hr width="100%" style="margin:10px 0; " />
+                                        <div class="d-flex justify-content-center">
+                                            <button type="submit" class="btn btn-success">Agregar <i class="bi bi-check-lg"></i></button>
+                                            <a style="margin-left: 6px;" href="@Url.Action("GetAllEvento", "Evento")" class="btn btn-warning">Regresar <i class="bi bi-arrow-return-left"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+
                         </form>
                     </div>
                 </div>
