--- a/PL/Views/Evento/GetAllEvento.cshtml
+++ b/PL/Views/Evento/GetAllEvento.cshtml
@@ -22,7 +22,7 @@
                 <h2 style="font-weight: bold;">Eventos</h2>
             </div>
             <div class="col-6" style="text-align: end; padding: 0px;">
-                <a href="@Url.Action("FormsEvento", "Evento")" class="btn btn-success">Agregar Libro <i class="bi bi-plus-circle"></i></a>
+                <a href="@Url.Action("FormsEvento", "Evento")" class="btn btn-success">Agregar Evento <i class="bi bi-plus-circle"></i></a>
             </div>
         </div>
         <div class="row">
